--- a/index.html
+++ b/index.html
@@ -8,27 +8,33 @@
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;}
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
 
 body{
-height:100vh;
-display:flex;
-justify-content:center;
-align-items:center;
-flex-direction:column;
-background: linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.35)),
-            url("me.JPEG") no-repeat center top/cover;
-overflow:hidden;
-font-family:'Poppins',sans-serif;
+    min-height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction:column;
+    text-align:center;
+    background:
+    linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
+    url("me.jpeg") no-repeat center center/cover;
+    font-family:'Poppins',sans-serif;
+    overflow-x:hidden;   /* horizontal scroll only block */
+    padding:20px;
 }
 
 h1{
-font-family:'Great Vibes',cursive;
-font-size:85px;
-color:white;
-text-shadow:0 0 25px #ff4b6e;
-animation:glow 2s infinite alternate;
-margin-top:150px; /* 👈 This moves text down */
+    font-family:'Great Vibes',cursive;
+    font-size:70px;
+    color:white;
+    text-shadow:0 0 25px #ff4b6e;
+    animation:glow 2s infinite alternate;
 }
 
 @keyframes glow{
@@ -37,36 +43,48 @@ to{ text-shadow:0 0 25px #fff,0 0 50px #ff4b6e;}
 }
 
 button{
-margin-top:40px;
-padding:18px 45px;
-font-size:22px;
-border:none;
-border-radius:50px;
-background:white;
-color:#ff4b6e;
-cursor:pointer;
-transition:0.4s;
-box-shadow:0 15px 35px rgba(0,0,0,0.2);
+    margin-top:40px;
+    padding:16px 40px;
+    font-size:20px;
+    border:none;
+    border-radius:50px;
+    background:white;
+    color:#ff4b6e;
+    cursor:pointer;
+    transition:0.4s;
+    box-shadow:0 15px 35px rgba(0,0,0,0.2);
 }
 
 button:hover{
-transform:scale(1.12);
-background:#ff4b6e;
-color:white;
+    transform:scale(1.08);
+    background:#ff4b6e;
+    color:white;
 }
 
 .heart{
-position:absolute;
-color:white;
-animation:float 6s linear infinite;
+    position:absolute;
+    color:white;
+    animation:float 6s linear infinite;
 }
 
 @keyframes float{
 0%{transform:translateY(100vh) scale(0);}
 100%{transform:translateY(-10vh) scale(1.5);}
 }
+
+/* 📱 Mobile adjustments */
+@media(max-width:768px){
+    h1{
+        font-size:42px;
+    }
+    button{
+        font-size:16px;
+        padding:12px 30px;
+    }
+}
 </style>
 </head>
+
 <body>
 
 <h1>Mah Everything 💖</h1>
@@ -84,7 +102,7 @@ heart.style.left=Math.random()*100+"vw";
 heart.style.fontSize=(Math.random()*25+15)+"px";
 document.body.appendChild(heart);
 setTimeout(()=>{heart.remove();},6000);
-},300);
+},400);
 </script>
 
 </body>
