--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body{
     text-align:center;
     background:
     linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
-    url("me.JPEG") no-repeat center center/cover;
+    url("us.JPEG") no-repeat center center/cover;
     font-family:'Poppins',sans-serif;
     overflow-x:hidden;   /* horizontal scroll only block */
     padding:20px;
@@ -107,4 +107,5 @@ setTimeout(()=>{heart.remove();},6000);
 
 </body>
 </html>
+
 
